# oxicrab

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY_REVIEW.md  build.rs  cliff.toml  config.example.json  config.example.toml  deny.toml  docker-compose.yml  rust-toolchain.toml  test_output.md
.config/: nextest.toml
crates/oxicrab-channels/: Cargo.toml
crates/oxicrab-channels/src/: dispatch.rs  lib.rs  media_utils.rs  regex_utils.rs
crates/oxicrab-channels/src/discord/: mod.rs  payloads.rs  tests.rs
crates/oxicrab-channels/src/manager/: mod.rs  tests.rs
crates/oxicrab-channels/src/slack/: formatting.rs  mod.rs  tests.rs
crates/oxicrab-channels/src/telegram/: mod.rs  tests.rs
crates/oxicrab-channels/src/twilio/: mod.rs  tests.rs
crates/oxicrab-channels/src/utils/: mod.rs  tests.rs
crates/oxicrab-channels/src/whatsapp/: mod.rs  tests.rs
crates/oxicrab-core/: Cargo.toml
crates/oxicrab-core/src/: credential_store.rs  lib.rs  safety.rs  utils.rs
crates/oxicrab-core/src/bus/: mod.rs
crates/oxicrab-core/src/bus/events/: mod.rs  tests.rs
crates/oxicrab-core/src/channels/base/: mod.rs  tests.rs
crates/oxicrab-core/src/config/schema/: agent.rs  channels.rs  mod.rs  providers.rs  router.rs  tools.rs
crates/oxicrab-core/src/cron_types/: mod.rs
crates/oxicrab-core/src/dispatch/: mod.rs
crates/oxicrab-core/src/errors/: tests.rs
crates/oxicrab-core/src/providers/base/: mod.rs  tests.rs
crates/oxicrab-core/src/tools/base/: mod.rs  routing_types.rs  tests.rs
crates/oxicrab-core/src/utils/: http.rs  media.rs  mod.rs  url_params.rs  url_security.rs
crates/oxicrab-gateway/: Cargo.toml
crates/oxicrab-gateway/src/: lib.rs  response_format.rs  status.rs  status_page.html  tests.rs
crates/oxicrab-gateway/src/a2a/: mod.rs
crates/oxicrab-memory/: Cargo.toml
crates/oxicrab-memory/src/: lib.rs
crates/oxicrab-memory/src/embeddings/: tests.rs
crates/oxicrab-memory/src/hygiene/: mod.rs  tests.rs
crates/oxicrab-memory/src/memory_db/: cost.rs  cron.rs  dlq.rs  embeddings.rs  indexing.rs  migrations.rs  mod.rs  oauth.rs  obsidian.rs  pairing.rs  rss.rs  search.rs  tests.rs  workspace.rs
crates/oxicrab-memory/src/memory_db/migrations/: 0001_base.sql
crates/oxicrab-memory/src/memory_store/: mod.rs  tests.rs
crates/oxicrab-memory/src/quality/: mod.rs  tests.rs
crates/oxicrab-memory/src/remember/: mod.rs  tests.rs
crates/oxicrab-memory/src/session/: store.rs
crates/oxicrab-memory/src/session/manager/: mod.rs  tests.rs
crates/oxicrab-providers/: Cargo.toml
crates/oxicrab-providers/src/: lib.rs  utils.rs
crates/oxicrab-providers/src/anthropic/: mod.rs  tests.rs
crates/oxicrab-providers/src/anthropic_common/: mod.rs  tests.rs
crates/oxicrab-providers/src/anthropic_oauth/: mod.rs  tests.rs
crates/oxicrab-providers/src/circuit_breaker/: mod.rs  tests.rs
crates/oxicrab-providers/src/errors/: mod.rs  tests.rs
crates/oxicrab-providers/src/fallback/: mod.rs  tests.rs
crates/oxicrab-providers/src/gemini/: mod.rs  tests.rs
crates/oxicrab-providers/src/openai/: mod.rs  tests.rs
crates/oxicrab-providers/src/prompt_guided/: mod.rs  tests.rs
crates/oxicrab-providers/src/strategy/: mod.rs  tests.rs
crates/oxicrab-router/: Cargo.toml
crates/oxicrab-router/src/: context.rs  lib.rs  metrics.rs  rules.rs  semantic.rs
crates/oxicrab-safety/: Cargo.toml
crates/oxicrab-safety/src/leak_detector/: mod.rs  tests.rs
crates/oxicrab-safety/src/prompt_guard/: mod.rs  tests.rs
crates/oxicrab-tools-api/: Cargo.toml
crates/oxicrab-tools-api/src/: lib.rs
crates/oxicrab-tools-api/src/github/: mod.rs  tests.rs
crates/oxicrab-tools-api/src/image_gen/: mod.rs  tests.rs
crates/oxicrab-tools-api/src/media/: mod.rs  tests.rs
crates/oxicrab-tools-api/src/todoist/: mod.rs  tests.rs
crates/oxicrab-tools-api/src/utils/: http.rs  media.rs  mod.rs
crates/oxicrab-tools-api/src/weather/: mod.rs  tests.rs
crates/oxicrab-tools-browser/: Cargo.toml
crates/oxicrab-tools-browser/src/: lib.rs
crates/oxicrab-tools-browser/src/browser/: mod.rs  tests.rs
crates/oxicrab-tools-browser/src/utils/: media.rs  mod.rs  url_security.rs
crates/oxicrab-tools-google/: Cargo.toml
crates/oxicrab-tools-google/src/: credentials.rs  lib.rs  utils.rs
crates/oxicrab-tools-google/src/auth/: mod.rs  tests.rs
crates/oxicrab-tools-google/src/google_calendar/: mod.rs  tests.rs
crates/oxicrab-tools-google/src/google_common/: mod.rs  tests.rs
crates/oxicrab-tools-google/src/google_mail/: mod.rs  tests.rs
crates/oxicrab-tools-google/src/google_tasks/: mod.rs  tests.rs
crates/oxicrab-tools-obsidian/: Cargo.toml
crates/oxicrab-tools-obsidian/src/: lib.rs  utils.rs
crates/oxicrab-tools-obsidian/src/obsidian/: cache.rs  client.rs  mod.rs  tests.rs
crates/oxicrab-tools-rss/: Cargo.toml
crates/oxicrab-tools-rss/src/: articles.rs  feeds.rs  lib.rs  model.rs  onboard.rs  scanner.rs  stats.rs  tests.rs
crates/oxicrab-tools-system/: Cargo.toml
crates/oxicrab-tools-system/src/: lib.rs
crates/oxicrab-tools-system/src/filesystem/: mod.rs  tests.rs
crates/oxicrab-tools-system/src/shell/: mod.rs  tests.rs
crates/oxicrab-tools-system/src/tmux/: mod.rs  tests.rs
crates/oxicrab-tools-system/src/utils/: mod.rs  path_sanitize.rs  regex_utils.rs  sandbox.rs  shell_ast.rs  subprocess.rs
crates/oxicrab-tools-system/src/utils/shell_ast/: mod.rs  tests.rs
crates/oxicrab-tools-web/: Cargo.toml
crates/oxicrab-tools-web/src/: lib.rs
crates/oxicrab-tools-web/src/http/: mod.rs  tests.rs
crates/oxicrab-tools-web/src/reddit/: mod.rs  tests.rs
crates/oxicrab-tools-web/src/utils/: http.rs  media.rs  mod.rs  regex.rs  url_security.rs
crates/oxicrab-tools-web/src/web/: mod.rs  tests.rs
crates/oxicrab-transcription/: Cargo.toml
crates/oxicrab-transcription/src/: lib.rs  tests.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parse.rs  fuzz_leak_detector.rs  fuzz_prompt_guard.rs  fuzz_router.rs  fuzz_url_validation.rs  fuzz_webhook_signature.rs
(+458 files in other folders)
