[package]
name = "oxicrab"
version = "0.11.5"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "High-performance Rust multi-channel AI assistant framework"
license = "MIT"
repository = "https://github.com/oxicrab/oxicrab"
homepage = "https://oxicrab.dev"
documentation = "https://docs.rs/oxicrab"
readme = "README.md"
keywords = ["ai", "assistant", "chatbot", "llm", "multi-channel"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["docs/", ".github/", "tests/", "target/", "*.md", "!README.md"]

[lib]
name = "oxicrab"
path = "src/lib.rs"

[[bin]]
name = "oxicrab"
path = "src/main.rs"

[features]
default = ["channel-telegram", "channel-discord", "channel-slack", "channel-whatsapp", "channel-twilio", "keyring-store"]
keyring-store = ["dep:keyring"]
channel-telegram = ["dep:teloxide"]
channel-discord = ["dep:serenity"]
channel-slack = ["dep:tokio-tungstenite"]
channel-whatsapp = ["dep:whatsapp-rust", "dep:whatsapp-rust-tokio-transport", "dep:whatsapp-rust-ureq-http-client", "dep:qr2term", "dep:qrcode"]
channel-twilio = ["dep:sha1"]

[dependencies]
aho-corasick = "1.1"
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
brush-parser = "0.3"
cap-std = "4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
cron = "0.15"
dirs = "6.0"
fastembed = { version = "5", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
fastrand = "2.0"
fs2 = "0.4"
form_urlencoded = "1.2"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
html-escape = "0.2"
indexmap = "2"
keyring = { version = "3", optional = true }
lru = "0.16"
oauth2 = "5.0"
open = "5.0"
qr2term = { version = "0.3", optional = true }
qrcode = { version = "0.14", optional = true }
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream", "rustls", "charset", "http2", "query", "form"] }
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
serenity = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = "0.10"
shlex = "1.3"
subtle = "2.6"
teloxide = { version = "0.17", default-features = false, features = ["rustls", "ctrlc_handler"], optional = true }
tempfile = "3.25"
tokio = { version = "1.49", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"], optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Note: Ensure >= 0.3.20 for RUSTSEC-2025-0055 (ANSI escape sequence injection) - current: 0.3.22
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.21", features = ["v4", "serde"] }
walkdir = "2.5"
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "1a563916001abfbba54b1c92c80e118b43e594f4", optional = true }
whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust", package = "whatsapp-rust-tokio-transport", rev = "1a563916001abfbba54b1c92c80e118b43e594f4", optional = true }
whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", package = "whatsapp-rust-ureq-http-client", rev = "1a563916001abfbba54b1c92c80e118b43e594f4", optional = true }
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"] }
which = "8.0"
whisper-rs = { version = "0.15", features = ["tracing_backend"] }

# Security: Force minimum versions of transitive dependencies to resolve vulnerabilities
# - CVE-2022-23639 / GHSA-qc84-gqf4-9926: crossbeam-utils AtomicCell unsoundness (fixed in >= 0.8.7)
#   Forces all transitive dependencies to use >= 0.8.7 (0.8.21 is latest 0.8.x)
# - CVE-2020-35910 / GHSA-ppj3-7jw3-8vc4: lock_api data races (fixed in >= 0.4.2)
#   Forces all transitive dependencies to use >= 0.4.2 (0.4.14 is latest 0.4.x)
# - crossbeam-queue vulnerability: Resolved by removing unused tokio-process dependency
crossbeam-utils = "0.8.21"  # CVE-2022-23639: >= 0.8.7 required
lock_api = "0.4.14"  # CVE-2020-35910: >= 0.4.2 required
thiserror = "2.0.18"
iana-time-zone = "0.1.65"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[profile.release]
opt-level = "z"       # Optimize for binary size
lto = true            # Fat link-time optimization
codegen-units = 1     # Single codegen unit for maximum optimization
strip = true          # Strip debug symbols
panic = "unwind"      # Unwind on panic (required for tool panic isolation via tokio::task::spawn)

[dev-dependencies]
filetime = "0.2"
proptest = "1.4"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6.5"

[package.metadata.deb]
maintainer = "James Turnbull <james@ltl.so>"
copyright = "2025, James Turnbull"
section = "utils"
priority = "optional"
depends = "$auto, adduser"
extended-description = "High-performance Rust multi-channel AI assistant framework that connects chat platforms (Telegram, Discord, Slack, WhatsApp, Twilio) to LLM providers via an agent loop with tool execution."
changelog = "deploy/deb/changelog"
maintainer-scripts = "deploy/deb"
assets = [
    ["target/release/oxicrab", "usr/bin/", "755"],
    ["deploy/oxicrab-system.service", "lib/systemd/system/oxicrab.service", "644"],
    ["deploy/deb/lintian-overrides", "usr/share/lintian/overrides/oxicrab", "644"],
    ["config.example.json", "usr/share/doc/oxicrab/config.example.json", "644"],
    ["README.md", "usr/share/doc/oxicrab/README.md", "644"],
    ["LICENSE", "usr/share/doc/oxicrab/LICENSE", "644"],
]

[package.metadata.generate-rpm]
post_install_script = "deploy/rpm/post_install.sh"
pre_uninstall_script = "deploy/rpm/pre_uninstall.sh"

[[package.metadata.generate-rpm.assets]]
source = "target/release/oxicrab"
dest = "/usr/bin/oxicrab"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "deploy/oxicrab-system.service"
dest = "/usr/lib/systemd/system/oxicrab.service"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "config.example.json"
dest = "/usr/share/doc/oxicrab/config.example.json"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/oxicrab/README.md"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/doc/oxicrab/LICENSE"
mode = "0644"
doc = true
