[workspace]
members = ["crates/oxicrab-core", "crates/oxicrab-memory", "crates/oxicrab-providers", "crates/oxicrab-channels", "crates/oxicrab-gateway", "crates/oxicrab-router", "crates/oxicrab-safety", "crates/oxicrab-tools-rss", "crates/oxicrab-tools-web", "crates/oxicrab-tools-system", "crates/oxicrab-tools-api", "crates/oxicrab-tools-google", "crates/oxicrab-tools-browser", "crates/oxicrab-tools-obsidian", "."]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
regex = "1"

[package]
name = "oxicrab"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "High-performance Rust multi-channel AI assistant framework"
license = "MIT"
repository = "https://github.com/oxicrab/oxicrab"
homepage = "https://oxicrab.dev"
documentation = "https://docs.rs/oxicrab"
readme = "README.md"
keywords = ["ai", "assistant", "chatbot", "llm", "multi-channel"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["docs/", ".github/", "tests/", "target/", "*.md", "!README.md"]

[lib]
name = "oxicrab"
path = "src/lib.rs"

[[bin]]
name = "oxicrab"
path = "src/main.rs"

[features]
default = ["channel-telegram", "channel-discord", "channel-slack", "channel-whatsapp", "channel-twilio", "keyring-store", "local-whisper", "embeddings", "tool-rss"]
keyring-store = ["dep:keyring"]
local-whisper = ["dep:whisper-rs"]
embeddings = ["dep:fastembed", "oxicrab-memory/embeddings"]
channel-telegram = ["oxicrab-channels/channel-telegram"]
channel-discord = ["oxicrab-channels/channel-discord"]
channel-slack = ["oxicrab-channels/channel-slack"]
channel-whatsapp = ["oxicrab-channels/channel-whatsapp", "dep:wa-rs", "dep:wa-rs-tokio-transport", "dep:wa-rs-ureq-http", "dep:qr2term", "dep:qrcode"]
channel-twilio = ["oxicrab-channels/channel-twilio"]
tool-rss = ["dep:oxicrab-tools-rss", "oxicrab-memory/rss"]

[dependencies]
oxicrab-core = { path = "crates/oxicrab-core" }
oxicrab-tools-web = { path = "crates/oxicrab-tools-web" }
oxicrab-tools-system = { path = "crates/oxicrab-tools-system" }
oxicrab-tools-api = { path = "crates/oxicrab-tools-api" }
oxicrab-tools-google = { path = "crates/oxicrab-tools-google" }
oxicrab-tools-browser = { path = "crates/oxicrab-tools-browser" }
oxicrab-tools-obsidian = { path = "crates/oxicrab-tools-obsidian" }
oxicrab-channels = { path = "crates/oxicrab-channels", default-features = false }
oxicrab-gateway = { path = "crates/oxicrab-gateway" }
oxicrab-memory = { path = "crates/oxicrab-memory", default-features = false, features = ["rss"] }
oxicrab-providers = { path = "crates/oxicrab-providers" }
oxicrab-router = { path = "crates/oxicrab-router" }
oxicrab-safety = { path = "crates/oxicrab-safety" }
oxicrab-tools-rss = { path = "crates/oxicrab-tools-rss", optional = true }
aho-corasick = "1.1"
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
cron = "0.15"
dirs = "6.0"
fastembed = { version = "5", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"], optional = true }
fastrand = "2.0"
fs2 = "0.4"
form_urlencoded = "1.2"
futures-util = "0.3"
governor = "0.10"
hex = "0.4"
hmac = "0.12"
html-escape = "0.2"
indexmap = "2"
jsonschema = { version = "0.37", default-features = false, features = ["resolve-http"] }
libc = "0.2"
keyring = { version = "3", optional = true }
lru = "0.16"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
moka = { version = "0.12", features = ["sync"] }
oauth2 = "5.0"
open = "5.0"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream", "rustls", "charset", "http2", "query", "form", "blocking"] }
rmcp = { version = "1.2", features = ["client", "transport-child-process"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
sha2 = "0.10"
subtle = "2.6"
tempfile = "3.25"
tokio = { version = "1.50", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Note: Ensure >= 0.3.20 for RUSTSEC-2025-0055 (ANSI escape sequence injection) - current: 0.3.22
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.22", features = ["v4", "serde"] }
walkdir = "2.5"
wa-rs = { version = "0.2", optional = true, default-features = false, features = ["sqlite-storage"] }
wa-rs-tokio-transport = { version = "0.2", optional = true }
wa-rs-ureq-http = { version = "0.2", optional = true }
feed-rs = { version = "2", optional = true }
nalgebra = { version = "0.33", optional = true }
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
qr2term = { version = "0.3", optional = true }
qrcode = { version = "0.14", optional = true }
which = "8.0"
whisper-rs = { version = "0.16", features = ["tracing_backend"], optional = true }

# Security: Force minimum versions of transitive dependencies to resolve vulnerabilities
# - CVE-2022-23639 / GHSA-qc84-gqf4-9926: crossbeam-utils AtomicCell unsoundness (fixed in >= 0.8.7)
#   Forces all transitive dependencies to use >= 0.8.7 (0.8.21 is latest 0.8.x)
# - CVE-2020-35910 / GHSA-ppj3-7jw3-8vc4: lock_api data races (fixed in >= 0.4.2)
#   Forces all transitive dependencies to use >= 0.4.2 (0.4.14 is latest 0.4.x)
# - crossbeam-queue vulnerability: Resolved by removing unused tokio-process dependency
crossbeam-utils = "0.8.21"  # CVE-2022-23639: >= 0.8.7 required
lock_api = "0.4.14"  # CVE-2020-35910: >= 0.4.2 required
thiserror = "2.0.18"
iana-time-zone = "0.1.65"
humantime = "2.3.0"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[profile.release]
opt-level = "z"       # Optimize for binary size
lto = true            # Fat link-time optimization
codegen-units = 1     # Single codegen unit for maximum optimization
strip = true          # Strip debug symbols
panic = "unwind"      # Unwind on panic (required for tool panic isolation via tokio::task::spawn)

[dev-dependencies]
filetime = "0.2"
proptest = "1.4"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6.5"

[package.metadata.deb]
maintainer = "James Turnbull <james@ltl.so>"
copyright = "2025, James Turnbull"
section = "utils"
priority = "optional"
depends = "$auto, adduser"
extended-description = "High-performance Rust multi-channel AI assistant framework that connects chat platforms (Telegram, Discord, Slack, WhatsApp, Twilio) to LLM providers via an agent loop with tool execution."
changelog = "deploy/deb/changelog"
maintainer-scripts = "deploy/deb"
assets = [
    ["target/release/oxicrab", "usr/bin/", "755"],
    ["deploy/oxicrab-system.service", "lib/systemd/system/oxicrab.service", "644"],
    ["deploy/deb/lintian-overrides", "usr/share/lintian/overrides/oxicrab", "644"],
    ["config.example.json", "usr/share/doc/oxicrab/config.example.json", "644"],
    ["README.md", "usr/share/doc/oxicrab/README.md", "644"],
    ["LICENSE", "usr/share/doc/oxicrab/LICENSE", "644"],
]

[package.metadata.generate-rpm]
post_install_script = "deploy/rpm/post_install.sh"
pre_uninstall_script = "deploy/rpm/pre_uninstall.sh"

[[package.metadata.generate-rpm.assets]]
source = "target/release/oxicrab"
dest = "/usr/bin/oxicrab"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "deploy/oxicrab-system.service"
dest = "/usr/lib/systemd/system/oxicrab.service"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "config.example.json"
dest = "/usr/share/doc/oxicrab/config.example.json"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/oxicrab/README.md"
mode = "0644"
doc = true

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/doc/oxicrab/LICENSE"
mode = "0644"
doc = true
