[package]
name = "oxicrab-channels"
version = "0.16.3"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Channel implementations for the oxicrab framework"
license = "MIT"

[features]
default = ["channel-telegram", "channel-discord", "channel-slack", "channel-whatsapp", "channel-twilio"]
channel-telegram = ["dep:teloxide"]
channel-discord = ["dep:serenity"]
channel-slack = ["dep:tokio-tungstenite"]
channel-whatsapp = ["dep:whatsapp-rust", "dep:qr2term", "dep:qrcode"]
channel-twilio = ["dep:sha1"]

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
fastrand = "2.0"
form_urlencoded = "1.2"
futures-util = { workspace = true }
hmac = { workspace = true }
indexmap = "2"
lru = { workspace = true }
moka = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls", "charset", "http2", "query", "form"] }
rusqlite = { workspace = true }
serde_json = { workspace = true }
subtle = "2.6"
tokio = { workspace = true }
tracing = { workspace = true }
html-escape = "0.2"
url = { workspace = true }
urlencoding = "2.1"

# Optional channel-specific dependencies
serenity = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
teloxide = { version = "0.17", default-features = false, features = ["rustls", "ctrlc_handler"], optional = true }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"], optional = true }
whatsapp-rust = { version = "0.4", optional = true, default-features = false, features = ["sqlite-storage", "tokio-transport", "ureq-client", "tokio-runtime", "tokio-native"] }
qr2term = { version = "0.3", optional = true }
qrcode = { version = "0.14", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
