[package]
name = "oxicrab-core"
version = "0.16.3"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Core types and traits for the oxicrab framework"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
fastrand = "2.0"
humantime = { workspace = true }
lru = { workspace = true }
ipnet = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls", "charset", "http2"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.18"
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
