[package]
name = "oxicrab-gateway"
version = "0.16.3"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "HTTP API and webhook handling for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
oxicrab-memory = { path = "../oxicrab-memory", default-features = false }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
governor = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
ipnet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
async-trait = { workspace = true }
tower = { version = "0.5", features = ["util"] }
