[package]
name = "oxicrab-memory"
version = "0.16.8"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Memory subsystem for the oxicrab framework"
license = "MIT"

[features]
default = ["embeddings"]
embeddings = ["dep:fastembed"]
rss = []

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
fastembed = { version = "5", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"], optional = true }
hex = { workspace = true }
lru = { workspace = true }
metrics = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = "1.11"
tempfile = { workspace = true }
