[package]
name = "oxicrab-providers"
version = "0.16.3"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "LLM provider implementations for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
fs2 = "0.4"
futures-util = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
oxicrab-memory = { path = "../oxicrab-memory", default-features = false }
wiremock = { workspace = true }
