[package]
name = "oxicrab-router"
version = "0.16.9"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Message router for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
metrics = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
