[package]
name = "oxicrab-tools-api"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "API tools for the oxicrab framework (GitHub, Weather, Todoist, Media, ImageGen)"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
fastrand = "2.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "charset", "http2", "query", "multipart", "form"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
form_urlencoded = "1.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6.5"
