[package]
name = "oxicrab-tools-api"
version = "0.16.2"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "API tools for the oxicrab framework (GitHub, Weather, Todoist, Media, ImageGen)"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls", "charset", "http2", "query", "multipart", "form"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
