[package]
name = "oxicrab-tools-browser"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Browser tool for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = { version = "0.9", default-features = false }
dirs = "6.0"
fastrand = "2.0"
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5"
uuid = { version = "1.22", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
